--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -22,5 +22,6 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["vite.config.ts"]
+  "extends": "@vue/tsconfig/tsconfig.node.json",
+  "include": ["vite.config.ts", "vite-env.d.ts", "electron.vite.config.ts"]
 }
