--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -22,6 +22,6 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "extends": "@vue/tsconfig/tsconfig.node.json",
+  "extends": "./tsconfig.json",
   "include": ["vite.config.ts", "vite-env.d.ts", "electron.vite.config.ts"]
 }
