--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@primevue/themes": "^4.4.1",
     "primeicons": "^7.0.0",
+    "primeflex": "^3.1.3",
     "primevue": "^4.4.1",
     "vue": "^3.5.22",
     "vue-router": "^4.6.3"
